<resources>
    <string name="app_name">tokoAlarm</string>
    <string name="background">background</string>
    <string name="application_system_security">Application System Security</string>
    <string name="logo">logo</string>
    <string name="app_copyright">Copyright &#169; 2023</string>
    <string name="app_version">Versi 1.8.2</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="silahkan_login_pada_form_dibawah_ini">Silahkan Login Pada Form dibawah ini</string>
    <string name="input">input</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="mohon_tunggu">Mohon Tunggu</string>
    <string name="close">Tutup</string>
    <string name="error_phone">Harap Isi No hp Anda</string>
    <string name="error_password">Harap Isi Password Anda</string>
    <string name="logout">Log Out</string>
    <string name="fail_login">Login Gagal</string>
    <string name="trouble_connection"> Periksa Koneksi Internet Anda</string>
    <string name="fail_access">"no hp atau password salah"</string>
    <string name="registerText">Isi form pendaftaran di bawah ini</string>
    <string name="name">Nama Lengkap</string>
    <string name="register_text_btn">Mulai Daftar</string>
    <string name="agreement_text"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="error_name">Harap Isi Nama Anda</string>
    <string name="aggrement_more">Silakan membaca seluruh ketentuan pada Syarat dan Ketentuan Selengkapnya</string>
    <string name="here">disini</string>
    <string name="info">info</string>
    <string name="error_aggrement"><![CDATA[Harap Ceklis Syarat & Ketentuan]]></string>
    <string name= "fail_register">Pendaftaran Gagal</string>
    <string name="home">Beranda</string>
    <string name="device">Perangkat</string>
    <string name="schedule">Jadwal</string>
    <string name="account">Akun</string>
    <string name="saldo">Saldo Saya</string>
    <string name="top_up">+ Top Up</string>
    <string name="history">History</string>
    <string name="tutorial">Tutorial</string>
    <string name="setting">Ubah Suara</string>
    <string name="buy_paket">beli paket</string>
    <string name="purpose">pesan alarm</string>">
    <string name= "help_administrator">app mengalami masalah , hubungin admin</string>
    <string name="news_label"><![CDATA[Berita & Promo]]></string>
    <string name="image_promo">image promo</string>
    <string name="item_navigation">item navigation</string>
    <string name="back">kembali</string>
    <string name="sample">sample</string>
    <string name="keterangan">Keterangan</string>
    <string name="tipe">Tipe</string>
    <string name="jumlah">Jumlah</string>
    <string name="saldo_awal">Saldo Awal</string>
    <string name="saldo_akhir">Saldo Akhir</string>
    <string name="isi_paket">Isi Paket</string>
    <string name="informasi">Informasi</string>
    <string name="pilih_harga">
        Pilih dan tekan Salah satu paket yang kamu sediakan di bawah ini.
    </string>
    <string name= "pilih_cara_pembayarran">
        Pilih dan Tekan Metode pembayaran yang anda inginkan di bawah ini.
    </string>
    <string name="pembayaran">pembayaran</string>
    <string name="no_rek">no/rek</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="batal">Kembali Ke Beranda</string>
    <string name="cara_pembayaran">
        Pembayaran sesuai angka nominal diberikan. Pastikan tiga digit angka di belakang sesuai dengan angka yang ditransfer. Setelah itu, tekan tombol konfirmasi. Customer Service kami akan segera menghubungi Anda.
    </string>
    <string name="ubah_suara">
        Ubah Suara Notifikasi dengan nada
    </string>
    <string name="ok">OK</string>
    <string name="notification_permission">
        mohon berikan izin untuk menerima notifikasi.
        app tidak akan berjalan baik jika izin tidak diberikan.
    </string>
    <string name="perhatian">perhatian</string>
    <string name="hari"> hari</string>
    <string name="durasi">Durasi</string>
    <string name= "harga">Harga</string>
    <string name= "infoBeliPaket">
        Pilih paket yang ingin Anda beli di bawah ini.
    </string>
    <string name ="get_alat">
        Isi ID sesuai pada perangkat , Hubungin CS jika ada masalah.
    </string>
    <string name="nomor_id_alat">Nomor Id Alat</string>
    <string name="empty_id_alat">
        ID Alat tidak boleh kosong.
    </string>
    <string name="berhasil" >
        Berhasil
    </string>
    <string name="id_salah" >
        ID Alat tidak sesuai, mohon periksa kembali
    </string>
    <string name="perpanjang">perpanjang</string>
    <string name="berakhir_pada">Berakhir pada</string>
    <string name="periode_mulai">Periode Mulai</string>
    <string name="paket">Paket</string>
    <string name="nomor_alat">Nomor Alat</string>
    <string name="sisa_masa_aktif">Sisa Masa Aktif</string>
    <string name="status">Status</string>
    <string name="monitoring">Monitoring</string>
    <string name="alat" >Alat</string>
    <string name="ubah_name">Ubah Nama</string>
    <string name="simpan">simpan</string>
    <string name="max_char_error">
        Nama Tidak Boleh Lebih Dari 40 Karakter
    </string>
    <string name="app_error">
        App mengalami masalah , Hubungi Admin
    </string>
    <string name="saldo_tidak_mencukupin">
        Saldo Tidak Mencukupin Silahkan Lakukan Top Up Terlebih dahulu
    </string>
    <string name="daftar_detail_paket">Daftar Detail Paket</string>
    <string name="daftar_jadwal">Daftar Jadwal Alarm</string>
    <string name="tambah_jadwal">Tambah Jadwal</string>
    <string name="tambah_perangkat">Tambah Perangkat</string>
    <string name="edit">Edit</string>
    <string name="hapus">hapus</string>
    <string name="terhubung_server">Terhubung Server</string>
    <string name="tidak_terhubung_server">Tidak Terhubung Server</string>
    <string name="check_server">Check Server</string>
    <string name="status_paket">Status Paket</string>
    <string name="status_alat">Status Alat</string>
    <string name="aktif">Aktif</string>
    <string name="no_active">Non Aktif</string>
    <string name="pending">Pending</string>
    <string name="mode_auto">Mode Auto</string>
    <string name="mode_manual">Mode Manual</string>
    <string name="bunyikan">Bunyikan</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="hubungin_admin_text">Tekan tombol dibawah ini untuk hubungin admin</string>
    <string name="hubungin_admin">Hubungin Admin</string>
    <string name="fitur_spy_text">
        Anda dapat menghilangkan suara pada alat dan anda tetap menerima pemberitahuan
        selain itu anda dapat membunyikannya secara manual
    </string>
    <string name="indicator">indicator</string>
    <string name="atur_lama_bunyi">Atur Lama Bunyi</string>
    <string name="satuan_detik">dengan satuan detik</string>
    <string name="rename_sensor">Nama Ulang Sensor</string>
    <string name="periksa_alat">Periksa Alat</string>
    <string name="riwayat">Riwayat</string>
    <string name="tanggal_terakhir_deteksi">Tanggal Terakhir Deteksi</string>
    <string name="waktu_terakhir_deteksi">Waktu Terakhir Deteksi</string>
</resources>