<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/icon_home_light"
        android:title="@string/home"

        />
    <item
        android:id="@+id/menu_device"
        android:icon="@drawable/icon_mobile_light"
        android:title="@string/device"
        android:enabled="true"
 />
    <item
        android:id="@+id/menu_schedule"
        android:icon="@drawable/icon_schedule_light"
        android:title="@string/schedule"
        android:enabled="true"

        />
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/icon_user_light"
        android:title="@string/account"
        android:enabled="true"

        />
</menu>