<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:background="@drawable/splash2"
            android:contentDescription="@string/background" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/splash3"
            android:contentDescription="@string/background" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="680dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/splash1"
            android:contentDescription="@string/background" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="-100dp">
        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp"
            android:paddingEnd="20dp">
            <ImageView
                android:layout_width="196dp"
                android:layout_height="88dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/logoputih"
                android:contentDescription="@string/background" />
            <TextView
                android:layout_marginTop="-37dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/robotolight"
                android:textColor="#FFFFFF"
                android:text="@string/application_system_security"
                android:contentDescription="@string/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle_round_10"
            android:orientation="vertical"
            android:elevation="9dp"
            android:padding="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/robotolight"
                android:gravity="center"
                android:text="@string/registerText"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_input"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="41dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/input"
                    android:src="@drawable/baseline_account_circle_24" />

                <EditText
                    android:id="@+id/reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:autofillHints="name"
                    android:background="@null"
                    android:fontFamily="@font/robotolight"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColorHint="#C5000000"
                    android:textColor="@color/black"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_input"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="41dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/input"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/reg_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:autofillHints="phone"
                    android:background="@null"
                    android:fontFamily="@font/robotolight"
                    android:hint="@string/nomor_handphone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColorHint="#C5000000"
                    android:textColor="@color/black"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/rectangle_input"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="37dp"
                    android:layout_height="34dp"
                    android:contentDescription="@string/input"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:autofillHints="password"
                    android:background="@null"
                    android:fontFamily="@font/robotolight"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="#C5000000"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                >

                <CheckBox
                    android:id="@+id/aggrement_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/robotomedium"
                    android:text="@string/agreement_text"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:id ="@+id/aggrement_text"
                    android:textColor="@color/black"
                    android:alpha="0.7"
                    android:layout_marginStart="6dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/robotomedium" />

            </LinearLayout>

            <Button
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_round_10_blue"
                android:fontFamily="@font/robotomedium"
                android:text="@string/register_text_btn"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:fontFamily="@font/robotomedium"
                android:text="@string/login"
                android:textAllCaps="false"
                android:alpha="0.7"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>