<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_round_10"
    android:orientation="vertical"
    android:elevation="@dimen/_4sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:id="@+id/switcher_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        >
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:text="@string/sample"
            android:fontFamily="@font/robotobold"

            />
        <TextView
            android:id="@+id/rename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/edit"
            android:background="@drawable/rectangle_round_10_blue"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:padding="@dimen/_5sdp"
            />
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"

        >
        <ImageView
            android:id="@+id/indicator"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/circle_icon"
            android:contentDescription="@string/indicator"
            />
        <TextView
            android:id="@+id/condition"
            android:paddingHorizontal="@dimen/_5sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample"
            android:textSize="@dimen/_12ssp"
            android:layout_weight="1"
            />
        <com.google.android.material.materialswitch.MaterialSwitch
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:checked="true"
            android:id="@+id/switcher"

            />
    </LinearLayout>

</LinearLayout>